master: Protect Azure withAzure Site Recovery

--- a/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/3 .Protect Azure with Azure Site Recovery.md
+++ b/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/3 .Protect Azure with Azure Site Recovery.md
@@ -9,7 +9,7 @@
     - Installing the Site **Recovery mobility service** happens when you enable replication for an **Azure VM**. 
       - The installed extension **registers the VM** with Site Recovery. 
       - **Continuous replication** of the VM then begins, with any writes to the disk immediately transferred to a local storage account. Site Recovery uses this account, replicating the cache to a storage account in the destination environment.
-  - What is a Recovery Services vault?
+  - What is a **Recovery Services vault**?
     - A **Recovery Services vault** enables Azure Site Recovery to complete disaster recovery replication. These vaults use storage accounts to **store data backups, VM configuration settings, and workloads**.
   - What are the target resources?
     - Target resources are all the Azure services that are created once our existing resources replicate. There are a few considerations:
@@ -38,6 +38,10 @@
     - A DR drill is vital to ensure the solution implemented meets the business continuity and disaster recovery (BCDR) requirements, and to check the replication works appropriately. Our DR drill, combined with RTO and RPO, needs to be tested thoroughly to ensure replication, failover, and recovery happen in the required timeframe.
     - For example, assume our RTO is an hour, and RPO is six hours. Our systems backed up every hour, that's an hour of lost data plus the additional hour to recover our systems.
     - Imagine our actual recovery time is five hours. Our systems are now close to being over six hours out of date, which means we'll be in breach of the BCDR RPO objective. Testing the actual time it takes to recover from failures can give us confidence that our systems follow our BCDR plans.
+  - Flexible failover of **multiple machines**
+    - Azure Site Recovery gives us the flexibility to run a full DR test scenario for all our virtual machines. We can create **recovery plans** that include **one or more of our VMs**. Failovers are runnable as many times as we like, and allow for a **flexible policy to test different combinations of infrastructure.**
+  - Difference between a drill and production failover
+    - When the failover completes, validate the VM is working as expected. Azure Site Recovery gives us the ability to change the recovery point at this stage. If we're happy the failover works, we'll **Commit** the failover.
   - ![](2019-11-20-23-08-57.png)
 - [Exercise - Run a disaster recovery drill](https://docs.microsoft.com/en-au/learn/modules/protect-infrastructure-with-site-recovery/6-exercise-run-disaster-recovery-drill/)
 - [Failover and failback using Azure Site Recovery](https://docs.microsoft.com/en-au/learn/modules/protect-infrastructure-with-site-recovery/7-failover-and-failback/)
