master: azure backup

--- a/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/4 .Azure Backup.md
+++ b/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/4 .Azure Backup.md
@@ -2,14 +2,14 @@
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/protect-virtual-machines-with-azure-backup/1-introduction/)
 - [Azure Backup features and scenarios](https://docs.microsoft.com/en-au/learn/modules/protect-virtual-machines-with-azure-backup/2-azure-backup-features-scenarios/)
   - Azure Backup provides cloud-based backup and restore services for both **Azure** and **on-premises** virtual machines. 
-    - Data, workloads, and machine state can all be backed up automatically at a granular level. 
+    - **Data, workloads, and machine state** can all be backed up automatically at a **granular level**. 
     - Azure Backup offers integration with **Microsoft-specific applications** such as SQL Server, SharePoint, and Exchange.
-    - Backups are stored in an Azure Recovery Services vault after you set up the appropriate component on the target machine.
-  - Azure Backup versus Azure Site Recovery
+    - Backups are stored in an **Azure Recovery Services vault** after you set up the appropriate component on the target machine.
+  - **Azure Backup** versus **Azure Site Recovery**
     - **Azure Site Recovery**: Replicates virtual machine workloads to secondary locations for **failover** if a disaster affects a whole site.
     - **Azure Backup**: Recovers data more **granularly**. For example, it recovers virtual machine **disks**, or **files** and **folders** that became corrupted or were accidentally deleted by users.
-  - Why use Azure Backup?
-    - **Automatic storage management**: You can maintain a fully Azure-based backup solution, or a heterogeneous solution where data is backed up and stored both on-premises and in Azure. Using on-premises storage devices is free, and storing within Azure uses a pay-as-you-go model.
+  - Why use **Azure Backup**?
+    - **Automatic storage management**: You can maintain a fully Azure-based backup solution, or a heterogeneous solution where **data is backed up and stored both on-premises and in Azure**. Using on-premises storage devices is free, and storing within Azure uses a pay-as-you-go model.
     - **High availability**: Because the service is cloud based, it's redundant and highly available by nature. The service doesn't need to be maintained, upgraded, or patched as a traditional solution would be.
     - **Unlimited data transfer**: Inbound and outbound backup traffic to your Azure subscription is unlimited.
     - **Data security**: The service uses AES 256-bit encryption for on-premises virtual machines and Storage Service Encryption for Azure virtual machines. Data is secured at rest on the Azure platform, and then decrypted when an authorized person or service accesses it.
@@ -18,8 +18,45 @@
       - **Locally redundant storage (LRS)**: Replicates data three times within the same region.
       - **Geo-redundant storage (GRS)**: Replicates data to another region within the geography. This is the default. We recommend this option in most cases, because it uses LRS in a primary region and a secondary region.
     - Azure Backup types
-      - Only MABS and DPM support app-aware backups.
+      - Only **MABS and DPM support app-aware backups**.
+    - Tools/agents:
+      - Microsoft Azure Backup Server (MABS)
+        - app-aware
+      - System Center Data Protection Manager (DPM)
+        - app-aware
+      - Microsoft Azure Recovery Services (MARS) agent
+        - not app-aware
+      - Azure Backup virtual machine extension
+        - app-aware on Windows
+    - Processes:
+      - DPM/MABS backup
+        - Backup using DPM/MABS and Azure Backup works as follows:
+          1. DPM/MABS protection agent is installed on each machine that will be backed up.
+          2. Machines and apps are backed up to local storage on DPM/MABS.
+          3. The Microsoft Azure Recovery Services (MARS) agent is installed on the DPM server/MABS.
+          4. The MARS agent backs up the DPM/MABS disks to a backup Recovery Services vault in Azure by using Azure Backup.
+  
+  **Location**|**OS**|**Environment**|**Level**|**Notes**
+  :-----:|:-----:|:-----:|:-----:|:-----:
+  On-premises|Windows|Virtual|Files, folders, volumes, system state, and app data|DPM or MABS, app-aware
+  On-premises|Windows|Physical|Files, folders, volumes, system state, and app data|DPM or MABS, app-aware
+  On-premises|Windows|Both|Direct backup of files, folders, and system state|MARS, not app-aware
+  On-premises|Linux|Virtual|Direct backup of files|Not supported with MARS.
+  On-premises|Linux|Physical|Direct backup of files|Not supported with MARS.
+  On-premises|Linux|Virtual|Files, folders, volumes, system state, and app data|DPM or MABS, app-aware
+  On-premises|Linux|Physical|Files, folders, volumes, system state, and app data|Not supported.
+  Azure|Windows|Virtual|Entire virtual machine|Azure Backup VM extension, app-aware
+  Azure|Windows|Virtual|Files, folders, and system state|Azure Backup VM extension and MARS, app-aware
+  Azure|Linux|Virtual|Entire virtual machine|Azure Backup VM extension, file-consistent
+  Azure|Linux|Virtual|Files, folders, volumes, system state, and app data|DPM or MARS, app-aware
+
       - ![](2019-11-20-23-43-21.png)
+  - SQL Server backups
+    - If you need to back up SQL Server workloads, other options are available. Azure Backup can install a **workload backup extension** on **a SQL Server instance on Windows** to support the following options:
+      - **Full**: Backs up the entire database and file groups. It also contains enough logs to do a restore. Transaction logs hold records of the most recent additions or removals of records in the database. Recent transaction logs are needed to perform an up-to-date restore of a database.
+      - **Differential**: Based on the last full backup that was performed, and captures only blocks of data that changed since the last full backup.
+      - **Transaction log**: Allows a point-in-time restoration of a database.
+    - SQL Server on Linux does not currently integrate with Azure Backup.
     - ![](2019-11-20-23-41-49.png)
 - [Back up an Azure virtual machine by using Azure Backup](https://docs.microsoft.com/en-au/learn/modules/protect-virtual-machines-with-azure-backup/3-back-up-azure-virtual-machine/)
   - Snapshots
